add NSF references to draft

--- a/draft.tex
+++ b/draft.tex
@@ -93,6 +93,8 @@ bookmarksopen=true]{hyperref}
 \section{The Model}
 \label{sec:model}
 
+The model is based on that of Banks (2000)
+
 %If we're going to do an empirical implementation of $\ga$ below, model needs to start with a basic understanding of uncertainty, run through lobbying response to it, up through aggregation into $\ga$ and how lobbying behavior turns into a ``yea'' vote total.
 
 \section{Some Theoretical Results}
@@ -193,7 +195,9 @@ with roll call votes numbered $k=1,\ldots,K$, legislators numbered $j=1,\dots,J$
 
 \item Ansolabehere, S., J. de Figueiredo, and J. Snyder Jr. (2003), ``Why Is There so Little Money in U.S. Politics?,'' {\em Journal of Economic Perspectives}, 17, 105-130.
 
-\item Becker, G., (1983) ``A Theory of Competition among Interest Groups for Political Influence.'' {\em Quarterly Journal of Economics} 98, 371-400.
+\item Banks, J. S., (2000), ``Buying Supermajorities in Finite Legislatures.'' {\em The American Political Science Review} 94, 677-681.
+
+\item Becker, G., (1983), ``A Theory of Competition among Interest Groups for Political Influence.'' {\em Quarterly Journal of Economics} 98, 371-400.
 
 \item Bombardini, M. (2008), ``Firm Heterogeneity and Lobby Participation,'' {\em Journal of International Economics}, 75, 329-348.
 
@@ -237,6 +241,54 @@ with roll call votes numbered $k=1,\ldots,K$, legislators numbered $j=1,\dots,J$
 
 \item Stigler, G. (1975) ``The Citizen and the State: Essays on Regulation.'' Chicago: Chicago University Press.
 
+
+
+\item Bafumi, J., Gelman, A., Park., D, Kaplan, N., 2005. Practical Issues in Implementing and Understanding Bayesian Ideal Point Estimation. Political Analysis 13, 171-187.
+	
+	
+
+	\item Buzard, K., 2014a. Endogenous Politics and the Design of Trade Agreements. Available at: \url{https://kbuzard.expressions.syr.edu/wp-content/uploads/Endogenous-Politics.pdf}.	
+		
+	\item Buzard, K., 2014b. Self-enforcing Trade Agreements, Dispute Settlement and Separation of Powers. Available at: \url{https://kbuzard.expressions.syr.edu/wp-content/uploads/2014/04/Self-enforcing-Trade_Agreements.pdf}.
+
+\begin{sloppypar}	
+	\item Buzard, K., 2014c. Trade Agreements in the Shadow of Lobbying. Available at: \url{https://kbuzard.expressions.syr.edu/wp-content/uploads/TradeAgreements_Shadow_Lobbying.pdf}.
+		\end{sloppypar}
+		
+
+	\item Coates, D., Ludema, R., 2001. A Theory of Trade Policy Leadership. Journal of Development Economics 65, 1-29.
+	
+	\item Conconi, P., Facchini, G., Steinhardt, M. F., Zanardi, M., 2012. The political economy of trade and migration: Evidence from the US Congress. HWWI Research Paper 136. Available at: \url{http://hdl.handle.net/10419/67944}.
+	
+	\item Dixit, A., Grossman, G., Helpman, E., 1997. Common Agency and Coordination: General Theory and Application to Government Policy Making. Journal of Political Economy 105, 752-769.
+
+	\item Feenstra, R., 1992. How Costly is Protectionism? Journal of Economic Perspectives 6, 159-178.
+
+	\item Gawande, K., Bandyopadhyay, U., 2000. Is Protection for Sale? Evidence on the Grossman-Helpman Theory of Endogenous Protection. The Review of Economics and Statistics 82, 139-152.
+
+	\item Gawande, K., Krishna, P., Olarreaga, M., 2009. What Governments Maximize and Why: The View from Trade. International Organization 63, 491-532.
+
+	\item Gawande, K., Krishna, P., Olarreaga, M., 2012. Lobbying Competition over Trade Policy. International Economic Review 53, 115-132.
+
+	\item Grossman, G., Helpman, E., 1995a. The Politics of Free-Trade Agreements. The American Economic Review 85, 667-690.
+
+	\item Grossman, G., Helpman, E., 1995b. Trade Wars and Trade Talks. The Journal of Political Economy 103, 675-708.
+
+	\item Iaryczower, M., Katz, G., Saiegh, S., 2013. Voting in the Bicameral Congress: Large Majorities as a Signal of Quality. Forthcoming in Journal of Law, Economics, and Organization.
+
+  \item Iida, K., 1996. Involuntary Defection in Two-Level Games. Public Choice 89, 283-303.
+  
+	\item Lake, J., Millimet, D., 2014a. An Empirical Analysis of Trade-Related Redistribution and the Political Viability of Free Trade. Available at: \url{http://people.smu.edu/jlake/pdfs/VotingFTAs.pdf}
+
+	\item Lake, J., Millimet, D., 2014b. Revisiting the link between PAC Contributions and Lobbying Expenditures. Available at: \url{http://people.smu.edu/jlake/pdfs/PACcontributionsLobbying.pdf}
+
+	\item Mansfield, E., Milner, H., 2012. Votes, Vetoes, and the Political Economy of International Trade Agreements. Princeton and Oxford: Princeton  University Press.
+
+	\item Milner, H., Rosendorff, B.P., 1997. Democratic Politics and International trade Negotiations: Elections and Divided Government as Constraints on Trade Liberalization. Journal of Conflict Resolution 41, 117-147.
+
+	\item Ornelas, E., 2005. Rent Destruction and the Political Viability of Free Trade Agreements. Quarterly Journal of Economics 120, 1475-1506.
+
+  
 
 \end{list}
 
